2004-04-22 Borut Razem <borut.razem@siol.net>
	* modules/binary_indicator.cc modules/binary_indicator.h modules/encoder.cc
	modules/encoder.h modules/gpsim_modules.cc modules/led.cc modules/led.h
	modules/logic.cc modules/logic.h modules/paraface.cc modules/paraface.h
	modules/push_button.cc modules/push_button.h modules/resistor.cc
	modules/resistor.h modules/switch.cc modules/switch.h modules/usart.cc
	modules/usart.h modules/video.cc modules/video.h: defined IN_MODULE
	symbol for modules, call get_interface(), get_cycles(), get_active_cpu(),
	get_symbol_table(), get_trace(void) accessor methods instead direct object
	access

2004-04-21 Borut Razem <borut.razem@siol.net>
	* src/gpsim_interface.h, src/gpsim_time.h, src/processor.cc, src/symbol.cc,
	src/trace.cc: create instances of inline methods by taking theirs address,
	so that they can be accessed from dynamic loadable modules

2004-04-19 Scott Dattalo <scott@dattalo.com>
	* modules/binary_indicator.cc, modules/encoder.cc,
	modules/gpsim_modules.cc, modules/led.cc, modules/logic.cc,
	modules/paraface.cc, modules/push_button.cc, modules/resistor.cc,
	modules/switch.cc, modules/usart.cc, modules/video.cc:
	Fixed ambiguous (to read, but still syntactically correct)
	references to "new_name".
	* src/breakpoints.h, src/breakpoints.cc:
	added a post assertion option to the register assertions.

2004-04-18 Borut Razem <borut.razem@siol.net>
	* src/14bit-registers.h, src/gpsim_interface.h, src/gpsim_time.h,
	src/processor.h, src/symbol.h, src/trace.h: introduced get_interface(),
	get_cycles(), get_active_cpu(), get_symbol_table(), get_trace(void)
	accessor methods
	* config_win32.h.in: defined GPSIM_MAJOR_VERSION, GPSIM_MINOR_VERSION and
	GPSIM_MICRO_VERSION symbols

2004-04-15 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc, src/ioports.cc, src/ioports.h: PORTC's T1OSC input
	can clock TMR1 on some PIC's. I've added some preliminary support for this.

2004-04-14 Scott Dattalo <scott@dattalo.com>